sbuild (0.49) UNRELEASED; urgency=low

  * Sbuild/Conf.pm: init checks if APT_CONFIG and DEBIAN_FRONTEND are
    being stripped from the environment by sudo (when running in split
    mode), and aborts with instructions for correctly configuring sudo.
    This prevents apt-get silently using the configuration from the host
    system instead of the chroot.

 -- Roger Leigh <rleigh@debian.org>  Fri, 14 Jul 2006 21:30:52 +0100

sbuild (0.48) unstable; urgency=low

  * Sbuild/Chroot.pm: Use su, rather than sudo, inside the chroot.  This
    prevents the APT_CONFIG and DEBCONF_FRONTEND environment variables
    from being removed (Closes: #376020).
  * Sbuild/Conf.pm: Add $Sbuild::Conf::su.
  * sbuild-setup.7.in: Remove sudo configuration inside the chroot, now
    this is no longer required.

 -- Roger Leigh <rleigh@debian.org>  Sun,  9 Jul 2006 18:18:33 +0100

sbuild (0.47) unstable; urgency=low

  * bin/checkchroot: Correct uninitialised value warnings due to using an
    undefined variable (Closes: #369709).
  * bin/chrapt, bin/updatechroot, bin/upgradechroot: When chroot_mode is
    "schroot", chdir to / to ensure the CWD exists inside the chroot.
    Thanks for Clint Adams for finding this (Closes: #372806).
  * sbuild: fetch_source_files: When running apt-cache, check if we got
    valid output, and warn appropriately if the output is invalid
    (Closes: #369707).  Output may be invalid if there are no deb-src
    lines in /etc/apt/sources.list in the chroot.
  * Sbuild/Conf.pm: Remove $Sbuild::Conf::log_dir checks.
  * Sbuild/Log.pm.in: If $Sbuild::Conf::log_dir does not exist, try to
    create it, and if this fails, warn and log to stdout
    (Closes: #369718).

 -- Roger Leigh <rleigh@debian.org>  Sat, 17 Jun 2006 12:04:36 +0100

sbuild (0.46) unstable; urgency=low

  * sbuild:
    - fetch_source_files: Only print "apt-get update" invocation in debug
      mode.
    - get_dpkg_status: Make sure $version is defined before checking its