@@ -49,8 +49,8 @@ them, it knows about source dependencies.
 locally available sources.
 .PP
 \fBsbuild\fR mails the build logs to a user.  It is configured by the
-configuration files \fI/etc/sbuild.conf\fP,
-\fI/etc/sbuild.conf.local\fP, and \fI~/.sbuildrc\fP.  An example
+configuration files \fI/usr/share/sbuild/sbuild.conf\fP,
+\fI/etc/sbuild/sbuild.conf\fP, and \fI~/.sbuildrc\fP.  An example
 sbuildrc is available in
 \fI/usr/share/doc/sbuild/examples/example.sbuildrc\fP.  \fBsbuild\fR
 will \fBnot\fP run without a valid \fI~/.sbuildrc\fP.
@@ -158,15 +158,15 @@ A URL for a Debian binary distribution; generated by sbuild for scripts in
 source-dependencies.
 .SH FILES
 .TP
-.I /etc/sbuild.conf
+.I /usr/share/sbuild/sbuild.conf
 Global configuration, maintained by the sbuild maintainer.
 .TP
-.I /etc/sbuild.conf.local
+.I /etc/sbuild/sbuild.conf
 Global configuration, maintained by the system administrator.  This
 may be used to override the defaults in sbuild.conf.
 .TP
 .I ~/.sbuildrc
-User specific configuration
+User-specific configuration.
 .TP
 .I /var/lib/sbuild
 Build statistics, source dependencies and lock files.
