@@ -1,7 +1,7 @@
 #
-# /etc/sbuild.conf: global sbuild configurations that are
-# supposed to be changed only by the sbuild author, not by the user.
-# Of course you're free to override values here in /etc/sbuild.conf.local
+# sbuild.conf: global sbuild configurations that are supposed to be
+# changed only by the sbuild author, not by the user.  Of course,
+# you're free to override values here in /etc/sbuild/sbuild.conf.
 #
 # commented out stuff are defaults
 #
